fixing front page spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -235,9 +235,9 @@ footer.navbar #foot-copy {
 }
 
 #splash-25c-button {
-  width: 205px;
+  width: 212px;
   padding: 195px 0 0 0;
-  margin-left: -20px;
+  margin-left: -25px;
 }
 
 h1.splash-title {
